# BiliLiveCut

./: .dockerignore  .env.example  .git-commit-msg  .git_msg.txt  .gitattributes  .gitignore  CHANGELOG.md  Dockerfile  MANIFEST.in  README.md  __p7_docfix.py  __test_result.txt  build_rust.py  conftest.py  docker-compose.yml  pyproject.toml  setup.py  setup_c.py  tests-before-v0146.txt
.cursor/rules/: commit-language.mdc
.github/workflows/: ci.yml  codeql.yml  release.yml
Highlight_Model/: CHANGELOG.md  README.md  __init__.py
Highlight_Model/dataset/: __init__.py  builder.py  guard.py  preprocessor.py  shared.py
Highlight_Model/feature_extractor/: __init__.py  acoustic.py  base.py  danmaku.py  fusion.py  linguistic.py  metadata.py  temporal.py
Highlight_Model/models/: __init__.py  drift.py  evaluate.py  inference.py  registry.py  self_learn.py  train.py
Highlight_Model/tests/: __init__.py  test_acoustic.py  test_danmaku.py  test_fusion.py  test_linguistic.py  test_metadata.py  test_preprocessor.py  test_self_learn.py  test_temporal.py
Public/: .gitignore  CHANGELOG.md  README.md  README_MAIN.md  build_bundle.py  build_exe.py  check.bat  check.ps1  install.bat  install.ps1  launcher.py  pip.ini  pyproject.toml  run.bat  run.ps1  setup.bat  setup.ps1
Public/app/: __init__.py  cli.py
Public/config/: scoring.yaml
Publish-PnP/: .gitignore  CHANGELOG.md  README.md  README_MAIN.md  build_bundle.py  build_exe.py  launcher.py  pip.ini  pyproject.toml  requirements-bundle.txt
Publish-PnP/app/: __init__.py  cli.py
Publish-PnP/config/: keywords.zh.txt
app/: __init__.py  _portable_release.py  cli.py
app/accelerators/: __init__.py  dispatcher.py
app/analysis/: __init__.py  _c_speedups.c  _speedups_py.py  _speedups_round2_py.py  asr_manager.py  asr_metrics.py  danmaku_sampling.py  highlight.py  keywords.py  llm.py  llm_providers.py  room_config.py  scoring_config.py  speedups.py  threshold_learning.py  topic_cluster.py  transcribe.py
app/clipping/: __init__.py  clipper.py  core.py  cover.py  ffmpeg_command.py  ffmpeg_probe.py  models.py  paths.py  validation.py
app/commands/: __init__.py  config.py  database.py  doctor.py  highlight_ml.py  maintenance.py  ml.py  process.py  record.py  room.py  serve.py
app/core/: __init__.py  asr_detection.py  config.py  ffmpeg_errors.py  logging.py  metrics.py  process_control.py  resource_budget.py  sanitize.py  settings_store.py
app/db/: migrate.py  migrate_v011.py  migration_v01411.py  models.py  optimize.py  schema.py  session.py
app/notify/: __init__.py  webhook.py
app/pipeline/: __init__.py  approval.py  claiming.py  collection.py  heartbeat.py  lease.py  lifecycle.py  live_monitor.py  orchestrator.py  publish_recovery.py  scheduler.py  stage_result.py  stale_recovery.py  storage_lifecycle.py  task_worker.py
app/publishing/: collection_copywriter.py  copywriter.py  journal.py  uploader.py
app/recording/: recorder.py
app/sources/: __init__.py
app/trends/: collector.py  scheduler.py  store.py
app/web/: __init__.py  login_handler.py  main.py  service.py
config/: __init__.py  scoring.yaml
docs/: highlight-model-data.md  highlight-model-lifecycle.md
docs/audit/: v0.1.14.10-post-fix-report.md  v0.1.14.10-pre-fix-audit.md  v0.1.14.7-post-fix-report.md  v0.1.14.7-pre-fix-audit.md  v0.1.14.9-post-fix-report.md
docs/changelog/: CHANGELOG_INDEX.md  CHANGELOG_PRE_0.1.0.md  CHANGELOG_PRE_0.1.1.md  CHANGELOG_PRE_0.1.10.md  CHANGELOG_PRE_0.1.11.md  CHANGELOG_PRE_0.1.2.md  CHANGELOG_PRE_0.1.3.md  CHANGELOG_PRE_0.1.4.md  CHANGELOG_PRE_0.1.5.md  CHANGELOG_PRE_0.1.6.md  CHANGELOG_PRE_0.1.7.md  CHANGELOG_PRE_0.1.8.md  CHANGELOG_PRE_0.1.9.md
docs/refactoring/: 82015b8-baseline.md  8660034-final-closure-baseline.md  f501a3d-baseline.md  portable-build-final-report.md  portable-embedded-payload-baseline.md  v0146-final-report.md  v0146-packaging-baseline.md
packaging/docker/: README.md  compose.yaml
packaging/portable/: .env.example  .gitignore  README.md  USER_GUIDE_ZH.md  __init__.py  build_bundle.py  build_engine_pack.py  build_exe.py  build_full_bundle.py  build_payload.py  download_engines.py  engine_pack.py  engine_pack_manifest.py  launcher.py  model_installer.py  payload_manifest.py  portable_launcher.spec  runtime_layout.py  source_snapshot.py
scripts/: archive_changelog.py  build_portable_payload.py  build_portable_runtime_wheels.py  check_changelog_archive.py  check_pip_audit_exemptions.py  check_version_consistency.py  ci_gate.py  docker-down.bat  docker-down.sh  docker-up.bat  docker-up.sh  generate_portable_runtime_locks.py  init_db.py  pip-audit-exemptions.json  release_audit.py  release_gate.py  run_coverage.py  run_ruff.py
tests/: __init__.py  test_asr_integration.py  test_asr_result.py  test_asr_review.py  test_behavioral_v7.py  test_clipping.py  test_danmaku.py  test_db.py  test_launcher_entrypoint.py  test_llm_providers.py  test_model_catalog.py  test_p2.py  test_p3.py  test_pipeline_integration.py  test_release_audit.py  test_stability_fixes.py  test_task_queue.py  test_trend_scheduler.py  test_trends.py  test_v0129_p1p2.py  test_version_consistency.py
tests/fault_injection/: test_p2.py  test_p3.py  test_stability_fixes.py  test_v0129_p1p2.py
tests/golden_set/: golden_eval.py  manifest.json
tests/integration/: test_asr_integration.py  test_asr_review.py  test_background_jobs.py  test_collection_event_identity.py  test_highlight_ml_dataset.py  test_highlight_ml_online.py  test_highlight_ml_operations.py  test_highlight_ml_registry.py  test_pipeline_integration.py  test_recording_control_api.py  test_review_boundaries.py  test_review_workflow.py  test_task_queue.py  test_web_ui.py
tests/unit/: test_accelerator_fallback_parity.py  test_analysis.py  test_asr_architecture.py  test_asr_result.py  test_ci_coverage.py  test_cli_basic.py  test_clipping.py  test_cookie.py  test_distribution_artifacts.py  test_frontend_javascript.py  test_highlight_ml_drift.py  test_highlight_ml_features.py  test_highlight_ml_online.py  test_highlight_ml_training.py  test_llm_providers.py  test_login_handler.py  (+19 more)
(+244 files in other folders)
