[project]
name = "bili-live-cut"
version = "0.1.8-alpha"
description = "AI 直播实时切片系统:监听 Bilibili 直播,自动录制、转写、识别高光、生成切片与文案"
readme = "README.md"
requires-python = ">=3.11"

# 阶段1(本地录制 MVP)所需的核心运行依赖。
# AI 相关重型依赖(faster-whisper / anthropic 等)放到可选 extras,
# 避免在仅需录制时被迫安装,也规避新版本 Python 的 wheel 兼容问题。
dependencies = [
    "httpx>=0.27",            # 异步 HTTP 客户端:调用 B 站公开接口
    "pydantic>=2.7",          # 数据校验
    "pydantic-settings>=2.3", # 从 .env / 环境变量读取配置
    "sqlmodel>=0.0.22",       # ORM(SQLAlchemy + Pydantic)
    "loguru>=0.7",            # 结构化日志
    "typer>=0.12",            # 命令行入口
    "rich>=13.7",             # 终端美化输出
    "websockets>=12.0",       # 弹幕 WebSocket 长连接
    "brotli>=1.1",            # 弹幕协议解压(B 站使用 brotli)
    "pyyaml>=6.0",            # 读取评分权重配置
    "numpy>=1.26",            # 音频特征计算(RMS 包络、静音检测)
]

[project.optional-dependencies]
# 阶段2+:语音转写。faster-whisper 依赖 ctranslate2,
# 若当前 Python 版本无预编译 wheel,请改用 Python 3.11/3.12 虚拟环境。
asr = [
    "faster-whisper>=1.0",
]
# 阶段3+:文案与高光 LLM 复核(OpenAI 兼容协议,境内对接 DeepSeek/通义/Kimi/GLM)。
llm = [
    "openai>=1.40",
]
# 阶段4+:Web 后台。
web = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "jinja2>=3.1",
]
# 开发与测试工具。
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.14",
    "ruff>=0.5",
]

[project.scripts]
# 安装后可直接用 `blc` 命令调用 CLI。
blc = "app.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
# E/F=pyflakes, I=isort, UP=pyupgrade, B=bugbear, D=pydocstyle(PEP257)
select = ["E", "F", "I", "UP", "B", "D"]
# D203/D213 与 D211/D212 冲突,二选一。
# D400/D415/D403 要求 docstring 首行以英文句号结尾/英文首字母大写,
# 与中文 docstring(句号「。」)冲突,故忽略。
# D107 不强制 __init__ 单独 docstring(类已用 :param: 说明参数)。
ignore = ["D203", "D213", "D400", "D415", "D403", "D107"]

[tool.ruff.lint.pydocstyle]
convention = "pep257"

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D100", "D103"]  # 测试文件放宽 docstring 要求

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
