[project]
name = "bili-live-cut"
version = "0.1.15.2-alpha"
description = "AI 直播实时切片系统:监听 Bilibili 直播,自动录制、转写、识别高光、生成切片与文案"
readme = "README.md"
requires-python = ">=3.11"

# 阶段1(本地录制 MVP)所需的核心运行依赖。
# AI 相关重型依赖(faster-whisper / anthropic 等)放到可选 extras,
# 避免在仅需录制时被迫安装,也规避新版本 Python 的 wheel 兼容问题。
dependencies = [
    "httpx>=0.27",            # 异步 HTTP 客户端:调用 B 站公开接口
    "pydantic>=2.7",          # 数据校验
    "pydantic-settings>=2.3", # 从 .env / 环境变量读取配置
    "sqlmodel>=0.0.22",       # ORM(SQLAlchemy + Pydantic)
    "loguru>=0.7",            # 结构化日志
    "typer>=0.12",            # 命令行入口
    "rich>=13.7",             # 终端美化输出
    "websockets>=12.0",       # 弹幕 WebSocket 长连接
    "brotli>=1.1",            # 弹幕协议解压(B 站使用 brotli)
    "pyyaml>=6.0",            # 读取评分权重配置
    "numpy>=1.26",            # 音频特征计算(RMS 包络、静音检测)
]

[project.optional-dependencies]
# 阶段2+: 语音转写。faster-whisper 依赖 ctranslate2,
# 若当前 Python 版本无预编译 wheel,请改用 Python 3.11/3.12 虚拟环境。
asr-whisper = [
    "faster-whisper>=1.0",
]
# V0.1.12.2: Paraformer-zh / SenseVoice-Small / Fun-ASR-Nano 所需依赖。
asr-funasr = [
    "funasr>=1.0",
    "modelscope>=1.20",
]
# V0.1.12.2: 全部 ASR 后端 (Whisper + FunASR 多引擎)。
asr-all = [
    "bili-live-cut[asr-whisper,asr-funasr]",
]
# 向后兼容别名: 等效 asr-all。
asr = [
    "bili-live-cut[asr-all]",
]
# 阶段3+:文案与高光 LLM 复核(OpenAI 兼容协议,境内对接 DeepSeek/通义/Kimi/GLM)。
llm = [
    "openai>=1.40",
]
# 高光模型高级树模型。默认 NumPy Logistic 无额外依赖；3.3 起不再支持 Python 3.11。
highlight-ml = [
    "xgboost>=3.2,<3.3",
]
# 阶段4+:Web 后台。
web = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "jinja2>=3.1",
    "python-multipart>=0.0.18",
    "playwright>=1.61,<1.62",
]
# 开发与测试工具。
dev = [
    "Cython==3.2.8",
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.14",
    "pytest-cov>=5.0",
    "pip-audit>=2.7",
    "ruff>=0.5",
    "Pillow>=10.0",
    "build>=1.2",
    "check-manifest>=0.51",
    "twine>=6.0",
]

[project.scripts]
# 安装后可直接用 `blc` 命令调用 CLI。
blc = "app.cli:app"

[build-system]
requires = ["setuptools>=69", "Cython==3.2.8"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["app", "app.*", "config"]

[tool.setuptools.package-data]
"app.web" = [
    "templates/*.html",
    "static/*.css",
    "static/*.js",
    "static/js/*.js",
    "static/js/*.txt",
]
"config" = ["*.yaml", "*.txt"]

[tool.check-manifest]
ignore = [
    ".cursor/rules/commit-language.mdc",
    ".dockerignore",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
# E/F=pyflakes, I=isort, UP=pyupgrade, B=bugbear, D=pydocstyle(PEP257)
select = ["E", "F", "I", "UP", "B", "D"]
# D203/D213 与 D211/D212 冲突,二选一。
# D400/D415/D403 要求 docstring 首行以英文句号结尾/英文首字母大写,
# 与中文 docstring(句号「。」)冲突,故忽略。
# D107 不强制 __init__ 单独 docstring(类已用 :param: 说明参数)。
ignore = ["D203", "D213", "D400", "D415", "D403", "D107"]

[tool.ruff.lint.pydocstyle]
convention = "pep257"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["D100", "D101", "D102", "D103", "E501"]  # 测试文件放宽 docstring 和行长要求
"packaging/portable/tests/**/*.py" = ["D100", "D101", "D102", "D103", "E501"]  # 可移植测试文件放宽
"packaging/portable/**/*.py" = ["E402", "D100", "D103"]  # 构建脚本需修改 sys.path 后再导入

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests", "packaging/portable/tests"]
addopts = "--tb=short -q"
markers = [
    "unit: Unit tests (fast, no IO)",
    "integration: Integration tests (moderate speed, some IO)",
    "artifact: Artifact tests (requires built EXE/ZIP)",
    "windows: Windows-only tests",
    "offline: Offline / no-network tests",
    "release: Release-gating tests",
]

[tool.coverage.run]
source = ["app"]
omit = ["tests/*", "app/web/templates/*", "app/web/static/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
fail_under = 50  # V0.1.12.9: 初始门槛 50%, 后续提升至 70%
precision = 2     # V0.1.14.11: 两位小数，避免 CI 显示 47% 而本地显示 48% 的误判
